Added header and project names

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Document</title>
+  </head>
+  <body>
+    <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
+<ul>
+<li><class="nav_links"><a href="home.html">Home</a></li> 
+<li><class="nav_links"><a href="#about-me">About Me</a></li> x
+<li>Contact</li>
+<li>Projects (Virtual Pets | High St Hospital)</li>
+
+</ul>
+<p>This is my awesome bio!</p>
+<div>This is a div element</div>
+  </body>
+</html>
