--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   <body>
     <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
 <ul>
-<li><class="nav_links"><a href="home.html">Home</a></li> 
-<li><class="nav_links"><a href="#about-me">About Me</a></li> x
+<li><class="nav_links"><a href="#home">Home</a></li> 
+<li><class="nav_links"><a href="#about-me">About Me</a></li>
 <li>Contact</li>
-<li>Projects (Virtual Pets | High St Hospital)</li>
-
+<li>Projects</li>
+    <li><ul>Virtual Pets</li></ul>
+    <li><ul>High St Hospital)</li></ul>
 </ul>
-<p>This is my awesome bio!</p>
+
+<h3>This is my awesome bio!</h3>
+<p>
+
+</p>
 <div>This is a div element</div>
   </body>
 </html>
