adjusted project list

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <li><class="nav_links"><a href="#about-me">About Me</a></li>
 <li>Contact</li>
 <li>Projects</li>
-    <li><ul>Virtual Pets</li></ul>
-    <li><ul>High St Hospital)</li></ul>
+    <ul><li>Virtual Pets</li></ul>
+    <ul><li>High St Hospital)</li></ul>
 </ul>
 
 <h3>This is my awesome bio!</h3>
