--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
 <ul>
 <li><class="nav_links"><a href="#home">Home</a></li> 
 <li><class="nav_links"><a href="#about-me">About Me</a></li>
-<li>Contact</li>
-<li>Projects</li>
-    <ul><li>Virtual Pets</li></ul>
-    <ul><li>High St Hospital)</li></ul>
+<li><class="nav_links"><a href="#contact">Contact</a></li>
+<li><class="nav_links"><a href="#projects">Projects</a></li>
 </ul>
 
 <h3>This is my awesome bio!</h3>
 <p>
-
+    I was born in Columbus, Ohio. Shortly after my family moved to Venezuela where I lived most of my life. While growing up I started playing different kinds of video games to which it slowly made me be more curious of how each component on a software level on computers and consoles worked. 
+    While studying Civil Engineering in Venezuela, I was met with C++ and that made it easy to find out that software development was my calling. After moving back to Columbus, I joined the USArmy where I served six years. Once I finished my contract I was in the lookout for a job and found We Can Code IT bootcamp where i became a software developer. My hobbies include playing video games, watching movies, and travelling.    
 </p>
-<div>This is a div element</div>
+
+<h2>These are my projects!</h2>
+<ul>Virtual Pets</ul>
+<p>
+This is a console based application that allows to you adopt a Organic or Cyborg type crab. Each crab have health, hunger, and boredom that ticks on each action. You can also take the crab to the Vet to get treated and play with them like making them do backflips.
+</p>
+<ul>High St Hospital</ul>
+<p>
+This is a console based application that shows a roster of a hospital and a patient. The application tells you a story of the patient getting sick with coronavirus and being sent to isolation and treated. In result the staff gets paid.
+</p>
+<!-- <div>This is a div element</div> -->
   </body>
 </html>
