Project takes you to another website

--- a/Projects.html
+++ b/Projects.html
@@ -9,10 +9,26 @@
 </head>
 
 <body>
-    <h2>These are my projects!</h2>
+    <h1 id="main-header" class="header_title">This are my projects</h1>
+    <ul>
+        <li>
+          <class="nav_links"><a href="#home">Home</a>
+        </li>
+        <li>
+          <class="nav_links"><a href="#about-me">About Me</a>
+        </li>
+        <li>
+          <class="nav_links"><a href="#contact">Contact</a>
+        </li>
+        <li>
+          <class="nav_links"><a href="Projects.html">Projects</a>
+        </li>
+      </ul>
+    
+    
     <ul>
         <div>
-            <h3>Virtual Pets</h3>
+            <h2>Virtual Pets</h2>
     </ul>
     <p>
         This is a console based application that allows to you adopt a Organic or Cyborg type crab. Each crab have
