made project website

--- a/Projects.html
+++ b/Projects.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-
 <body>
-    <h1 id="main-header" class="header_title">This are my projects</h1>
+    <h1 id="main--header" class="header_title">This are my projects</h1>
     <ul>
         <li>
-          <class="nav_links"><a href="#home">Home</a>
+            <class="nav_links"><a href="Home.html">Home</a>
         </li>
         <li>
-          <class="nav_links"><a href="#about-me">About Me</a>
+            <class="nav_links"><a href="#about-me">About Me</a>
         </li>
         <li>
-          <class="nav_links"><a href="#contact">Contact</a>
+            <class="nav_links"><a href="#contact">Contact</a>
         </li>
         <li>
-          <class="nav_links"><a href="Projects.html">Projects</a>
+            <class="nav_links"><a href="Projects.html">Projects</a>
         </li>
-      </ul>
-    
-    
+    </ul>
+
+
     <ul>
         <div>
             <h2>Virtual Pets</h2>
@@ -52,5 +42,3 @@
         </p>
     </div>
 </body>
-
-</html>
