--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
   <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
   <ul>
     <li>
-      <class="nav_links"><a href="#home">Home</a>
+      <class="nav_links"><a href="Home.">Home</a>
     </li>
     <li>
       <class="nav_links"><a href="#about-me">About Me</a>
