added project pictures

--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
             <class="nav_links"><a href="#contact">Contact</a>
         </li>
         <li>
-            <class="nav_links"><a href="Projects.html">Projects</a>
+            <class="nav_links"><a href="Projects.html" target= "_blank">Projects</a>
         </li>
     </ul>
 
@@ -26,11 +26,13 @@
         hunger, and boredom that ticks on each action. You can also take the crab to the Vet to get treated and play
         with
         them like making them do backflips.
+        <img src="./crabby.png" alt='This is a picture of a crab' style="width:250px;height:300px;">
+        <img src="./Pictures/Fiddler_crab.jpg" alt='This is a picture of a cyborg crab' style="width:250px;height:300px;">
     </p>
     </div>
     <div>
         <ul>
-            <h3>High St Hospital</h3>
+            <h2>High St Hospital</h2>
         </ul>
         <p>
             This is a console based application that shows a roster of a hospital and a patient. The application tells
@@ -39,6 +41,7 @@
             staff
             gets
             paid.
+            <img src="./Pictures/hospital-Staff.jpg" alt='This is a picture of medical staff' style="width:250px;height:300px;">
         </p>
     </div>
 </body>
