adjusted project pictures

--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
       <class="nav_links"><a href="#contact">Contact</a>
     </li>
     <li>
-      <class="nav_links"><a href="Projects.html">Projects</a>
+      <class="nav_links"><a href="Projects.html" target="_blank">Projects</a>
     </li>
   </ul>
   <div>
