--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
             <class="nav_links"><a href="#contact">Contact</a>
         </li>
         <li>
-            <class="nav_links"><a href="Projects.html" target= "_blank">Projects</a>
+            <class="nav_links"><a href="Projects.html">Projects</a>
         </li>
     </ul>
 
@@ -26,8 +26,8 @@
         hunger, and boredom that ticks on each action. You can also take the crab to the Vet to get treated and play
         with
         them like making them do backflips.
-        <img src="./crabby.png" alt='This is a picture of a crab' style="width:250px;height:300px;">
-        <img src="./Pictures/Fiddler_crab.jpg" alt='This is a picture of a cyborg crab' style="width:250px;height:300px;">
+        <img src="./crabby.png" alt='This is a picture of a crab' style="width:350px;height:300px;">
+        <img src="./Pictures/Fiddler_crab.jpg" alt='This is a picture of a cyborg crab' style="width:300px;height:300px;">
     </p>
     </div>
     <div>
@@ -41,7 +41,6 @@
             staff
             gets
             paid.
-            <img src="./Pictures/hospital-Staff.jpg" alt='This is a picture of medical staff' style="width:250px;height:300px;">
-        </p>
+            <p><img src="./Pictures/hospital-Staff.jpg" alt='This is a picture of medical staff' style="width:300px;height:250px;"></p></p>
     </div>
 </body>
