added contact info links

--- a/Home.html
+++ b/Home.html
@@ -35,7 +35,12 @@
       finished my contract I was in the lookout for a job and found We Can Code IT bootcamp where i became a
       software developer. My hobbies include playing video games, watching movies, and travelling.</p>
   </div>
-  <!-- <div>This is a div element</div> -->
+
+  <h3>Contact Information</h3>
+  <ul>
+    <li><class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">linkedin/danielvillasmil</a></li>
+    <li><class="nav_links"><a href="dvillasmil08@gmail.com" target="_blank">dvillasmil08@gmail.com</a></li>
+  </ul>
 </body>
 
 </html>
