added logos and links to contact info

--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
       <class="nav_links"><a href="#contact">Contact</a>
     </li>
     <li>
-      <class="nav_links"><a href="Projects.html" target="_blank">Projects</a>
+      <class="nav_links"><a href="Projects.html">Projects</a>
     </li>
   </ul>
   <div>
@@ -38,8 +38,8 @@
 
   <h3>Contact Information</h3>
   <ul>
-    <li><class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">linkedin/danielvillasmil</a></li>
-    <li><class="nav_links"><a href="dvillasmil08@gmail.com" target="_blank">dvillasmil08@gmail.com</a></li>
+    <li><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:250px;height:300px;"> <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a></li>
+    <li><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:250px;height:300px;">dvillasmil08@gmail.com</li>
   </ul>
 </body>
 
