--- a/Home.html
+++ b/Home.html
@@ -12,13 +12,13 @@
   <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
   <ul>
     <li>
-      <class="nav_links"><a href="Home.">Home</a>
+      <class="nav_links"><a href="Home.html">Home</a>
     </li>
     <li>
-      <class="nav_links"><a href="#about-me">About Me</a>
+      <class="nav_links"><a href="Home.html">About Me</a>
     </li>
     <li>
-      <class="nav_links"><a href="#contact">Contact</a>
+      <class="nav_links"><a href="Home.html">Contact</a>
     </li>
     <li>
       <class="nav_links"><a href="Projects.html">Projects</a>
@@ -38,8 +38,8 @@
 
   <h3>Contact Information</h3>
   <ul>
-    <li><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:250px;height:300px;"> <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a></li>
-    <li><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:250px;height:300px;">dvillasmil08@gmail.com</li>
+    <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:25px;"> <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a></p>
+    <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;">dvillasmil08@gmail.com</p>
   </ul>
 </body>
 
