added flex box in projects & changed fonts

--- a/Home.html
+++ b/Home.html
@@ -38,8 +38,8 @@
 
   <h3>Contact Information</h3>
   <ul>
-    <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:25px;"> <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a></p>
-    <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;">dvillasmil08@gmail.com</p>
+    <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;"> <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a></p>
+    <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;"><class="nav_links"><a href= "https://mail.google.com/mail/" target="_blank"></class>dvillasmil08@gmail.com</a></p>
   </ul>
 </body>
 
