--- a/Projects.html
+++ b/Projects.html
@@ -17,8 +17,9 @@
 
 
     <ul>
-        <div>
-            <h2>Virtual Pets</h2>
+        <div class="pictures__picture-box">
+            <div>
+                <h2>Virtual Pets</h2>
     </ul>
     <p>
         This is a console based application that allows to you adopt a Organic or Cyborg type crab. Each crab have
@@ -27,7 +28,8 @@
         with
         them like making them do backflips.
         <img src="./crabby.png" alt='This is a picture of a crab' style="width:350px;height:300px;">
-        <img src="./Pictures/Fiddler_crab.jpg" alt='This is a picture of a cyborg crab' style="width:300px;height:300px;">
+        <img src="./Pictures/Fiddler_crab.jpg" alt='This is a picture of a cyborg crab'
+            style="width:300px;height:300px;">
     </p>
     </div>
     <div>
@@ -41,6 +43,9 @@
             staff
             gets
             paid.
-            <p><img src="./Pictures/hospital-Staff.jpg" alt='This is a picture of medical staff' style="width:300px;height:250px;"></p></p>
+            <p><img src="./Pictures/hospital-Staff.jpg" alt='This is a picture of medical staff'
+                    style="width:300px;height:250px;"></p>
+        </p>
+    </div>
     </div>
 </body>
