added flex box in projects & changed fonts

--- a/Home.html
+++ b/Home.html
@@ -9,21 +9,23 @@
 </head>
 
 <body>
-  <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
-  <ul>
-    <li>
-      <class="nav_links"><a href="Home.html">Home</a>
-    </li>
-    <li>
-      <class="nav_links"><a href="Home.html">About Me</a>
-    </li>
-    <li>
-      <class="nav_links"><a href="Home.html">Contact</a>
-    </li>
-    <li>
-      <class="nav_links"><a href="Projects.html">Projects</a>
-    </li>
-  </ul>
+  <div class="header_icons">
+    <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
+    <ul>
+      <li>
+        <class="nav_links"><a href="Home.html">Home</a>
+      </li>
+      <li>
+        <class="nav_links"><a href="Home.html">About Me</a>
+      </li>
+      <li>
+        <class="nav_links"><a href="Home.html">Contact</a>
+      </li>
+      <li>
+        <class="nav_links"><a href="Projects.html">Projects</a>
+      </li>
+    </ul>
+  </div>
   <div>
     <h3>This is my awesome bio!</h3>
     <p>
@@ -38,8 +40,12 @@
 
   <h3>Contact Information</h3>
   <ul>
-    <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;"> <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a></p>
-    <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;"><class="nav_links"><a href= "https://mail.google.com/mail/" target="_blank"></class>dvillasmil08@gmail.com</a></p>
+    <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;">
+      <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a>
+    </p>
+    <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;">
+      <class="nav_links"><a href="https://mail.google.com/mail/" target="_blank"></class>dvillasmil08@gmail.com</a>
+    </p>
   </ul>
 </body>
 
