--- a/Projects.html
+++ b/Projects.html
@@ -5,10 +5,10 @@
             <class="nav_links"><a href="Home.html">Home</a>
         </li>
         <li>
-            <class="nav_links"><a href="#about-me">About Me</a>
+            <class="nav_links"><a href="Home.html">About Me</a>
         </li>
         <li>
-            <class="nav_links"><a href="#contact">Contact</a>
+            <class="nav_links"><a href="Home.html">Contact</a>
         </li>
         <li>
             <class="nav_links"><a href="Projects.html">Projects</a>
