added flex box in projects & changed fonts

--- a/Home.html
+++ b/Home.html
@@ -4,49 +4,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>MyPorfolio</title>
+  <style>
+  p.solid {border-style: solid;}
+</style>
 </head>
 
 <body>
   <div class="header_icons">
     <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
-    <ul>
-      <li>
+    <div class="nav__icon">
+      <ul>
         <class="nav_links"><a href="Home.html">Home</a>
-      </li>
-      <li>
-        <class="nav_links"><a href="Home.html">About Me</a>
-      </li>
-      <li>
-        <class="nav_links"><a href="Home.html">Contact</a>
-      </li>
-      <li>
-        <class="nav_links"><a href="Projects.html">Projects</a>
-      </li>
-    </ul>
-  </div>
-  <div>
-    <h3>This is my awesome bio!</h3>
-    <p>
-      I was born in Columbus, Ohio. Shortly after my family moved to Venezuela where I lived most of my life. While
-      growing up I started playing different kinds of video games to which it slowly made me be more curious of how each
-      component on a software level on computers and consoles worked.
-      While studying Civil Engineering in Venezuela, I was met with C++ and that made it easy to find out that software
-      development was my calling. After moving back to Columbus, I joined the USArmy where I served six years. Once I
-      finished my contract I was in the lookout for a job and found We Can Code IT bootcamp where i became a
-      software developer. My hobbies include playing video games, watching movies, and travelling.</p>
+          <class="nav_links"><a href="Home.html">About Me</a>
+            <class="nav_links"><a href="Home.html">Contact</a>
+              <class="nav_links"><a href="Projects.html">Projects</a>
+      </ul>
+    </div>
   </div>
 
-  <h3>Contact Information</h3>
-  <ul>
-    <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;">
-      <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel Villasmil</a>
-    </p>
-    <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;">
-      <class="nav_links"><a href="https://mail.google.com/mail/" target="_blank"></class>dvillasmil08@gmail.com</a>
-    </p>
-  </ul>
+
+  <div class="bio">
+    <h3 class="bio__header">Let me share a little bit of myself!</h3>
+    <p class="solid">
+      I was born in Columbus, Ohio. Shortly after my family moved to Venezuela where I lived most of my life.
+      While
+      growing up I started playing different kinds of video games to which it slowly made me be more curious of
+      how
+      each
+      component on a software level on computers and consoles worked.
+      While studying Civil Engineering in Venezuela, I was met with C++ and that made it easy to find out that
+      software
+      development was my calling. After moving back to Columbus, I joined the USArmy where I served six years.
+      Once I
+      finished my contract I was in the lookout for a job and found We Can Code IT bootcamp where i became a
+      software developer. My hobbies include playing video games, watching movies, and travelling.</p>
+
+  </div>
+
+
+  <div class="contact">
+    <ul>
+      <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;">
+        <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel
+            Villasmil</a>
+      </p>
+      <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;">
+        <class="nav_links"><a href="https://mail.google.com/mail/" target="_blank"></class>
+            dvillasmil08@gmail.com</a>
+      </p>
+    </ul>
+  </div>
+
+
+
 </body>
 
 </html>
