added contact site with logos

--- a/Home.html
+++ b/Home.html
@@ -17,8 +17,7 @@
     <div class="nav__icon">
       <ul>
         <class="nav_links"><a href="Home.html">Home</a>
-          <class="nav_links"><a href="Home.html">About Me</a>
-            <class="nav_links"><a href="Home.html">Contact</a>
+            <class="nav_links"><a href="Contact.html">Contact</a>
               <class="nav_links"><a href="Projects.html">Projects</a>
       </ul>
     </div>
