added color and adjusted format

--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,29 @@
   <link rel="stylesheet" href="style.css">
   <title>MyPorfolio</title>
   <style>
-  p.solid {border-style: solid;}
+  .nav__icon {
+  overflow: hidden;
+  background-color: #333;
+  }
+  .nav__icon a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.nav__icon a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+  .footer {
+  padding: 10px;
+  text-align: center;
+  
+  }
+
 </style>
 </head>
 
@@ -43,7 +65,7 @@
   </div>
 
 
-  <div class="contact">
+  <div class="footer">
     <ul>
       <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;">
         <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel
