--- a/Projects.html
+++ b/Projects.html
@@ -5,7 +5,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>MyProjects</title>
+    <title>Projects</title>
+<style>
+    .nav__icon {
+        overflow: hidden;
+        background-color: #333;
+        }
+        .nav__icon a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      .nav__icon a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+    </style>
+
 </head>
   <body>
 
