--- a/Contact.html
+++ b/Contact.html
@@ -39,7 +39,7 @@
         <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
         <div class="nav__icon">
             <ul>
-                <class="nav_links"><a href="Home.html">Home</a>
+                <class="nav_links"><a href="index.html">Home</a>
                     <class="nav_links"><a href="Contact.html">Contact</a>
                         <class="nav_links"><a href="Projects.html">Projects</a>
             </ul>
