added link to github projects

--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,7 @@
             <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
             <div class="nav__icon">
                 <ul>
-                    <class="nav_links"><a href="Home.html">Home</a>
+                    <class="nav_links"><a href="index.html">Home</a>
                             <class="nav_links"><a href="Contact.html">Contact</a>
                                 <class="nav_links"><a href="Projects.html">Projects</a>
                 </ul>
@@ -41,7 +41,7 @@
   
         <div class="pictures__picture-box">
             <ul>
-                <h2 class="virtual_crab">Virtual Pets</h2>
+                 <h2 class="virtual_crab"><a href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers" target="_blank">Virtual Pets</h2></a>
             </ul>
   
             <p class="solid">This is a console based application that allows to you adopt a Organic or Cyborg type crab. Each crab have
@@ -57,7 +57,7 @@
             </p>
         
             <ul>
-                <h2 class="hospital">High St Hospital</h2>
+                <h2 class="hospital"><a href="https://github.com/2020-Spring-Cohort/high-st-hospital-DanielVillasmil">High St Hospital</h2></a>
             </ul>
             <p class="solid">
                 This is a console based application that shows a roster of a hospital and a patient. The application tells you a story of the patient getting sick with coronavirus and being sent to isolation and treated. In result the staff gets paid.
