added link to gmail and removed background picture

--- a/Contact.html
+++ b/Contact.html
@@ -39,7 +39,7 @@
         <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
         <div class="nav__icon">
             <ul>
-                <class="nav_links"><a href="index.html">Home</a>
+                <class="nav_links"><a href="Home.html">Home</a>
                     <class="nav_links"><a href="Contact.html">Contact</a>
                         <class="nav_links"><a href="Projects.html">Projects</a>
             </ul>
@@ -75,7 +75,7 @@
                 <h2 class="gmail">Gmail</h2>
             </ul>
             <ul>
-                <class="nav_links"><a href="dvillasmil08@gmail.com" target="_blank">
+                <class="nav_links"><a href="https://mail.google.com/mail/ca/u/0/#drafts/" + draftResponse.getMessage().getThreadId() target="_blank">
             </ul>
             <img src="./Pictures/gmail_logo.png" alt='This is a gmail logo' width="250" height="200">
             </a>
