--- a/Projects.html
+++ b/Projects.html
@@ -57,7 +57,7 @@
             </p>
         
             <ul>
-                <h2 class="hospital"><a href="https://github.com/2020-Spring-Cohort/high-st-hospital-DanielVillasmil">High St Hospital</h2></a>
+                <h2 class="hospital"><a href="https://github.com/2020-Spring-Cohort/high-st-hospital-DanielVillasmil"target="_blank">High St Hospital</h2></a>
             </ul>
             <p class="solid">
                 This is a console based application that shows a roster of a hospital and a patient. The application tells you a story of the patient getting sick with coronavirus and being sent to isolation and treated. In result the staff gets paid.
