--- a/Contact.html
+++ b/Contact.html
@@ -4,33 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" href="layout.css">
     <title>Contact</title>
-    <style>
-        .column {
-            margin-top: 100px;
-            margin-left: 100px;
-            float: center;   
-        }
-        .nav__icon {
-            overflow: hidden;
-            background-color: #333;
-        }
-
-        .nav__icon a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        .nav__icon a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-    </style>
 </head>
 
 <body>
