--- a/Projects.html
+++ b/Projects.html
@@ -4,26 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" href="layout.css">
     <title>Projects</title>
-<style>
-    .nav__icon {
-        overflow: hidden;
-        background-color: #333;
-        }
-        .nav__icon a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-      .nav__icon a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-    </style>
 
 </head>
   <body>
@@ -64,20 +46,6 @@
             <img src="./Pictures/hospital-Staff.jpg" alt='This is a picture of medical staff'
                         style="width:250px;height:200px;"></p>
             </p>
-            
-  <div class="contact">
-    <ul>
-      <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;">
-        <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel
-            Villasmil</a>
-      </p>
-      <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;">
-        <class="nav_links"><a href="https://mail.google.com/mail/" target="_blank"></class>
-            dvillasmil08@gmail.com</a>
-      </p>
-    </ul>
-  </div>
-
         
     </div>
 </body>
