--- a/index.html
+++ b/index.html
@@ -4,33 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" href="layout.css">
   <title>MyPorfolio</title>
-  <style>
-  .nav__icon {
-  overflow: hidden;
-  background-color: #333;
-  }
-  .nav__icon a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-.nav__icon a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-  .footer {
-  padding: 10px;
-  text-align: center;
-  
-  }
-
-</style>
 </head>
 
 <body>
@@ -39,15 +14,15 @@
     <div class="nav__icon">
       <ul>
         <class="nav_links"><a href="index.html">Home</a>
-            <class="nav_links"><a href="Contact.html">Contact</a>
-              <class="nav_links"><a href="Projects.html">Projects</a>
+          <class="nav_links"><a href="Contact.html">Contact</a>
+            <class="nav_links"><a href="Projects.html">Projects</a>
       </ul>
     </div>
   </div>
 
 
   <div class="bio">
-    <h3 class="bio__header">Let me share a little bit of myself!</h3>
+    <h3 class="bio__header">Let me share a little about myself!</h3>
     <p class="solid">
       I was born in Columbus, Ohio. Shortly after my family moved to Venezuela where I lived most of my life.
       While
@@ -65,19 +40,15 @@
   </div>
 
 
-  <div class="footer">
-    <ul>
-      <p><img src="./Pictures/LinkedIn.png" alt="this is a linkedIn Logo" style="width:35px;height:27px;">
-        <class="nav_links"><a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">Daniel
-            Villasmil</a>
-      </p>
-      <p><img src="./Pictures/gmail_logo.png" alt="This is a Gmail logo" style="width:34px;height:20px;">
-        <class="nav_links"><a href="https://mail.google.com/mail/" target="_blank"></class>
-            dvillasmil08@gmail.com</a>
-      </p>
-    </ul>
+  <div class="nav__foot">
+    <div class="Tech_Stack">
+      <h3>Tech Stack</h3>
+      <ul>
+        <p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query Language (SQL) • Relational Databases • Source Control / Git
+        </p>
+      </ul>
+    </div>
   </div>
-
 
 
 </body>
