created grid on contacts

--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" href="layout.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout.css">
     <title>Contact</title>
 </head>
 
@@ -22,21 +23,19 @@
     </div>
 
 
-    <div class="social__media">
-        <div class="column left">
+    <d  iv class="social__media">
             <ul>
-                <h2 class="github">GitHub</h2>
+            <div class="github"><h2>GitHub</h2>
             </ul>
             <ul>
                 <a href="https://github.com/DanielVillasmil" target="_blank">
             </ul>
-            <img src="./Pictures/Github-icon.png" alt='This is a GitHub logo' width="215" height="215">
-            </a>
-        </div>
+            <img src="./Pictures/Github-icon.png" alt='This is a GitHub logo' width="215" height="215"></a>
+            </d iv>  
 
-        <div class="column middle">
+            <div class="LinkedIn">
             <ul>
-                <h2 class="linkedIn">linkedIn</h2>
+                <h2 class="linkedIn__title">linkedIn</h2>
             </ul>
             <ul>
                 <a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">
@@ -45,7 +44,7 @@
             </a>
         </div>
 
-        <div class="column middle">
+        <div class="gmail__tittle">
             <ul>
                 <h2 class="gmail">Gmail</h2>
             </ul>
