created grid on contacts

--- a/Contact.html
+++ b/Contact.html
@@ -23,37 +23,24 @@
     </div>
 
 
-    <d  iv class="social__media">
-            <ul>
-            <div class="github"><h2>GitHub</h2>
-            </ul>
-            <ul>
-                <a href="https://github.com/DanielVillasmil" target="_blank">
-            </ul>
-            <img src="./Pictures/Github-icon.png" alt='This is a GitHub logo' width="215" height="215"></a>
-            </d iv>  
+    <div class="social__media">
+        <ul>
+            <a href="https://github.com/DanielVillasmil" target="_blank">
 
-            <div class="LinkedIn">
-            <ul>
-                <h2 class="linkedIn__title">linkedIn</h2>
-            </ul>
-            <ul>
-                <a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">
-            </ul>
-            <img alt='This is a linkedIn logo' src="./Pictures/LinkedIn2.png" width="205" height="205">
-            </a>
-        </div>
+                <img src="./Pictures/Github-icon.png" alt='This is a GitHub logo' width="140" height="130"></a> </ul>
 
-        <div class="gmail__tittle">
-            <ul>
-                <h2 class="gmail">Gmail</h2>
-            </ul>
-            <ul>
-                <class="nav_links"><a href="https://mail.google.com/mail/ca/u/0/#drafts/" + draftResponse.getMessage().getThreadId() target="_blank">
-            </ul>
-            <img src="./Pictures/gmail_logo.png" alt='This is a gmail logo' width="250" height="200">
+        <ul>
+            <a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">
+
+                <img alt='This is a linkedIn logo' src="./Pictures/LinkedIn2.png" width="130" height="123">
             </a>
-        </div>
+        </ul>
+        <ul>
+            <class="nav_links"><a href="https://mail.google.com/mail/ca/u/0/#drafts/" +
+                    draftResponse.getMessage().getThreadId() target="_blank">
+        <img src="./Pictures/gmail_logo.png" alt='This is a gmail logo' width="150" height="120">
+        </a>
+    </ul>
     </div>
 
 </body>
