--- a/Contact.html
+++ b/Contact.html
@@ -14,33 +14,32 @@
     <div class="header_icons">
         <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
         <div class="nav__icon">
-            <ul>
                 <class="nav_links"><a href="index.html">Home</a>
                     <class="nav_links"><a href="Contact.html">Contact</a>
                         <class="nav_links"><a href="Projects.html">Projects</a>
-            </ul>
         </div>
     </div>
 
 
     <div class="social__media">
-        <ul>
+            <div class="github">
             <a href="https://github.com/DanielVillasmil" target="_blank">
 
                 <img src="./Pictures/Github-icon.png" alt='This is a GitHub logo' width="140" height="130"></a> </ul>
-
-        <ul>
+            </div>
+            <div class="linkedin">
             <a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">
 
                 <img alt='This is a linkedIn logo' src="./Pictures/LinkedIn2.png" width="130" height="123">
             </a>
-        </ul>
-        <ul>
+        </div>
+        <div class="gmail">
             <class="nav_links"><a href="https://mail.google.com/mail/ca/u/0/#drafts/" +
                     draftResponse.getMessage().getThreadId() target="_blank">
         <img src="./Pictures/gmail_logo.png" alt='This is a gmail logo' width="150" height="120">
         </a>
-    </ul>
+    </div>
+
     </div>
 
 </body>
