--- a/Contact.html
+++ b/Contact.html
@@ -14,20 +14,21 @@
     <div class="header_icons">
         <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
         <div class="nav__icon">
-                <class="nav_links"><a href="index.html">Home</a>
-                    <class="nav_links"><a href="Contact.html">Contact</a>
-                        <class="nav_links"><a href="Projects.html">Projects</a>
+            <a href="index.html">Home</a></li>
+            <a href="Contact.html">Contact</a>
+            <a href="Projects.html">Projects</a>
+
         </div>
     </div>
 
 
     <div class="social__media">
-            <div class="github">
+        <div class="github">
             <a href="https://github.com/DanielVillasmil" target="_blank">
 
                 <img src="./Pictures/Github-icon.png" alt='This is a GitHub logo' width="140" height="130"></a> </ul>
-            </div>
-            <div class="linkedin">
+        </div>
+        <div class="linkedin">
             <a href="https://www.linkedin.com/in/danielvillasmil/" target="_blank">
 
                 <img alt='This is a linkedIn logo' src="./Pictures/LinkedIn2.png" width="130" height="123">
@@ -36,9 +37,9 @@
         <div class="gmail">
             <class="nav_links"><a href="https://mail.google.com/mail/ca/u/0/#drafts/" +
                     draftResponse.getMessage().getThreadId() target="_blank">
-        <img src="./Pictures/gmail_logo.png" alt='This is a gmail logo' width="150" height="120">
-        </a>
-    </div>
+                    <img src="./Pictures/gmail_logo.png" alt='This is a gmail logo' width="150" height="120">
+                </a>
+        </div>
 
     </div>
 
