--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
   <div class="header_icons">
     <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
     <div class="nav__icon">
-     
-        <class="nav_links"><a href="index.html">Home</a>
-          <class="nav_links"><a href="Contact.html">Contact</a>
-            <class="nav_links"><a href="Projects.html">Projects</a>
-     
+      <a href="index.html">Home</a>
+      <a href="Contact.html">Contact</a>
+      <a href="Projects.html">Projects</a>
     </div>
   </div>
 
@@ -45,7 +43,9 @@
     <div class="Tech_Stack">
       <h3>Tech Stack</h3>
       <ul>
-        <p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query Language (SQL) • Relational Databases • Source Control / Git
+        <p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid • TDD • Agile (Scrum) •
+          Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query
+          Language (SQL) • Relational Databases • Source Control / Git
         </p>
       </ul>
     </div>
