deleted underline on links

--- a/Projects.html
+++ b/Projects.html
@@ -25,7 +25,7 @@
 
   <div class="pictures__picture-box">
     <ul>
-      <h2 class="virtual_crab"><a href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers"
+      <h2 class="virtual_crab"><a id="crab" href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers"
           target="_blank">Virtual Pets</h2></a>
     </ul>
 
@@ -42,7 +42,7 @@
     </p>
 
     <ul>
-      <h2 class="hospital"><a href="https://github.com/2020-Spring-Cohort/high-st-hospital-DanielVillasmil"
+      <h2 class="hospital"><a id="hospi" href="https://github.com/2020-Spring-Cohort/high-st-hospital-DanielVillasmil"
           target="_blank">High St Hospital</h2></a>
     </ul>
     <p class="solid">
