adjusted bio and box size on home page

--- a/Projects.html
+++ b/Projects.html
@@ -29,7 +29,7 @@
           target="_blank">Virtual Pets</h2></a>
     </ul>
 
-    <p class="solid">This is a console based application that allows to you adopt a Organic or Cyborg type crab. Each
+    <p class="solidprojec">This is a console based application that allows to you adopt a Organic or Cyborg type crab. Each
       crab have
       health,
       hunger, and boredom that ticks on each action. You can also take the crab to the Vet to get treated and play
@@ -45,7 +45,7 @@
       <h2 class="hospital"><a id="hospi" href="https://github.com/2020-Spring-Cohort/high-st-hospital-DanielVillasmil"
           target="_blank">High St Hospital</h2></a>
     </ul>
-    <p class="solid">
+    <p class="solidprojec">
       This is a console based application that shows a roster of a hospital and a patient. The application tells you a
       story of the patient getting sick with coronavirus and being sent to isolation and treated. In result the staff
       gets paid.
