created grid for projects

--- a/Projects.html
+++ b/Projects.html
@@ -7,29 +7,29 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="layout.css">
   <title>Projects</title>
-
 </head>
 
 <body>
 
   <div class="header_icons">
-    <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
-    <div class="nav__icon">
-      
-       <a href="index.html">Home</a>
+      <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
+      <div class="nav__icon">
+        <a href="index.html">Home</a>
         <a href="Contact.html">Contact</a>
         <a href="Projects.html">Projects</a>
-    
+
     </div>
   </div>
 
   <div class="pictures__picture-box">
     <ul>
-      <h2 class="virtual_crab"><a id="crab" href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers"
-          target="_blank">Virtual Pets</h2></a>
+      <h2 class="virtual_crab"><a id="crab"
+          href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers" target="_blank">Virtual Pets
+      </h2></a>
     </ul>
 
-    <p class="solidprojec">This is a console based application that allows to you adopt a Organic or Cyborg type crab. Each
+    <p class="solidprojec">This is a console based application that allows to you adopt a Organic or Cyborg type crab.
+      Each
       crab have
       health,
       hunger, and boredom that ticks on each action. You can also take the crab to the Vet to get treated and play
