Added box on social media

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
   <div class="nav__foot">
     <div class="Tech_Stack">
       <h3>Tech Stack</h3>
-      <ul>
-        <p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid • TDD • Agile (Scrum) •
+      
+        <p class="techStack">Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid • TDD • Agile (Scrum) •
           Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query
           Language (SQL) • Relational Databases • Source Control / Git
         </p>
-      </ul>
+      
     </div>
   </div>
 
