Changed background image, changed project page layout and fonts

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
   <div class="bio">
-    <h3 class="bio__header">Let me share a little about myself!</h3>
+    <h3 class="bio__header">A little bit about myself!</h3>
     <p class="solidbio">
       I was born in Columbus, Ohio. Shortly after my family moved to Venezuela where I lived most of my life.
       While
