--- a/Projects.html
+++ b/Projects.html
@@ -12,46 +12,69 @@
 <body>
 
   <div class="header_icons">
-      <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
-      <div class="nav__icon">
-        <a href="index.html">Home</a>
-        <a href="Contact.html">Contact</a>
-        <a href="Projects.html">Projects</a>
+    <h1 id="main-header" class="header_title">Daniel Villasmil</h1>
+    <div class="nav__icon">
+      <a href="index.html">Home</a>
+      <a href="Contact.html">Contact</a>
+      <a href="Projects.html">Projects</a>
 
     </div>
   </div>
 
   <div class="pictures__picture-box">
-    
-      <h2 class="virtual_crab"><a id="crab"
-          href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers" target="_blank">Virtual Pets
-      </h2></a>
-    
-
-    <p class="solidprojec">This is a console based application that allows to you adopt a Organic or Cyborg type crab.
-      Each
-      crab have
-      health,
-      hunger, and boredom that ticks on each action. You can also take the crab to the Vet to get treated and play
-      with
-      them like making them do backflips.
 
 
-      <img src="./Pictures/crabby.png" alt='This is a picture of a crab' style="width:300px;height:250px;">
-      <img src="./Pictures/Fiddler_crab.jpg" alt='This is a picture of a cyborg crab' style="width:300px;height:300px;">
-    </p>
 
-    <ul>
-      <h2 class="hospital"><a id="hospi" href="https://github.com/2020-Spring-Cohort/high-st-hospital-DanielVillasmil"
-          target="_blank">High St Hospital</h2></a>
-    </ul>
-    <p class="solidprojec">
-      This is a console based application that shows a roster of a hospital and a patient. The application tells you a
-      story of the patient getting sick with coronavirus and being sent to isolation and treated. In result the staff
-      gets paid.
-      <img src="./Pictures/hospital-Staff.jpg" alt='This is a picture of medical staff'
-        style="width:250px;height:200px;"></p>
-    </p>
+    <div class="oneDayAtATime">
+      <h2><a href="https://github.com/WCCI-one-day-at-a-time/OneDayAtATime" target="_blank">One Day At a Time</a>
+      </h2>
+
+      <p class="solidprojec">
+        This is web application that was created using JavaScript and Java to provide tips and tricks for your mental
+        health, meet ups, group information, and national crisis phone numbers.
+      </p>
+    </div>
+
+
+    <div class="purpleHaze">
+      <h2><a href="https://github.com/2020-Spring-Cohort/artists-albums-songs-purple-haze" target="_blank">Purple
+          Haze</a>
+      </h2>
+      <p class="solidprojec">
+        This is a single page web application focused on displaying artists and albums from the 1970s utilizing
+        JavaScript and APIs.
+      </p>
+    </div>
+
+    <div class="clicking__calamity">
+      <h2><a href="https://github.com/2020-Spring-Cohort/clicking-calamity-DanielVillasmil" target="_blank">Clicking
+          Calamity</a>
+      </h2>
+      <p class="solidprojec">
+        Web applicaiton using the basics of JavaScript and create a website that allows you to buy clicks and
+        multipliers. This was inspired by the Cookie Clicker game.
+      </p>
+    </div>
+
+    <div class="reviews__site">
+      <h2><a href="https://github.com/2020-Spring-Cohort/reviews-site-ndis" target="_blank">Review Site</a>
+      </h2>
+      <p class="solidprojec">
+        This web applcation was created using h2 database and thymeleaf templates, so that the user could review and
+        comment of different types of laptops.
+      </p>
+    </div>
+
+    <div class="virtual_crab">
+      <h2><a href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers" target="_blank">Virtual
+          Pets
+        </a></h2>
+
+      <p class="solidprojec">This is a console based application that allows to you adopt a Organic or Cyborg type crab.
+        Each crab has health, hunger, and boredom that ticks on each action. You can also take the crab to the Vet to
+        get treated and play with them like making them do backflips.
+      </p>
+    </div>
 
   </div>
 </body>
