Changed background opacity

--- a/Projects.html
+++ b/Projects.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="pictures__picture-box">
-
+    
 
 
     <div class="oneDayAtATime">
@@ -30,51 +30,43 @@
       </h2>
 
       <p class="solidprojec">
-        This is web application that was created using JavaScript and Java to provide tips and tricks for your mental
-        health, meet ups, group information, and national crisis phone numbers.
+        This is web application that was created using JavaScript and Java to provide tips and tricks for your mental health, meet ups, group information, and national crisis phone numbers.
       </p>
     </div>
 
 
     <div class="purpleHaze">
-      <h2><a href="https://github.com/2020-Spring-Cohort/artists-albums-songs-purple-haze" target="_blank">Purple
-          Haze</a>
-      </h2>
-      <p class="solidprojec">
-        This is a single page web application focused on displaying artists and albums from the 1970s utilizing
-        JavaScript and APIs.
-      </p>
-    </div>
+      <p class="solidprojec"><a href="https://github.com/2020-Spring-Cohort/artists-albums-songs-purple-haze" target="_blank"><h2>Purple Haze</h2></a>
+      This is a single page web application focused on displaying artists and albums from the 1970s utilizing JavaScript and APIs.
+    </p>
+  </div>
 
-    <div class="clicking__calamity">
-      <h2><a href="https://github.com/2020-Spring-Cohort/clicking-calamity-DanielVillasmil" target="_blank">Clicking
-          Calamity</a>
-      </h2>
-      <p class="solidprojec">
-        Web applicaiton using the basics of JavaScript and create a website that allows you to buy clicks and
-        multipliers. This was inspired by the Cookie Clicker game.
-      </p>
-    </div>
+  <div class="clicking__calamity">
+    <h2><a href="https://github.com/2020-Spring-Cohort/clicking-calamity-DanielVillasmil" target="_blank">Clicking Calamity</a>
+    </h2>
+  <p class="solidprojec">
+    Web applicaiton using the basics of JavaScript and create a website that allows you to buy clicks and multipliers. This was inspired by the Cookie Clicker game.
+  </p>
+</div>
 
-    <div class="reviews__site">
-      <h2><a href="https://github.com/2020-Spring-Cohort/reviews-site-ndis" target="_blank">Review Site</a>
-      </h2>
-      <p class="solidprojec">
-        This web applcation was created using h2 database and thymeleaf templates, so that the user could review and
-        comment of different types of laptops.
-      </p>
-    </div>
+<div class="reviews__site">
+  <h2><a href="https://github.com/2020-Spring-Cohort/reviews-site-ndis" target="_blank">Review Site</a>
+  </h2>
+<p class="solidprojec">
+  This web applcation was created using h2 database and thymeleaf templates, so that the user could review and comment of different types of laptops.
+</p>
+</div>
 
-    <div class="virtual_crab">
-      <h2><a href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers" target="_blank">Virtual
-          Pets
-        </a></h2>
+<!-- <div class="virtual_crab">
+  <h2><a href="https://github.com/2020-Spring-Cohort/virtual-pets-amok-the-crab-manglers" target="_blank">Virtual
+      Pets
+    </a></h2>
 
-      <p class="solidprojec">This is a console based application that allows to you adopt a Organic or Cyborg type crab.
-        Each crab has health, hunger, and boredom that ticks on each action. You can also take the crab to the Vet to
-        get treated and play with them like making them do backflips.
-      </p>
-    </div>
+  <p class="solidprojec">This is a console based application that allows to you adopt a Organic or Cyborg type crab.
+    Each crab has health, hunger, and boredom that ticks on each action. You can also take the crab to the Vet to
+    get treated and play with them like making them do backflips.
+  </p>
+</div> -->
 
   </div>
 </body>
